form button overlap fix

--- a/FlsTaleQuiz/Content/css/styles.css
+++ b/FlsTaleQuiz/Content/css/styles.css
@@ -218,7 +218,6 @@ div {
     }
 
 .fields {
-    height: 63rem;
     text-align: left;
     padding-top: 4rem;
 }
@@ -280,6 +279,7 @@ div {
 .margin-t {
     margin-top: 6rem;
     min-height: 16rem;
+    box-sizing: border-box;
 }
 
 .field-textarea[value=""] {
@@ -288,29 +288,30 @@ div {
     display: block;
     box-sizing: border-box;
     font-size: 2.2rem;
-    line-height: 2rem;
+    line-height: 3.2rem;
     padding: 1rem;
-    height: 15rem;
+    height: 16rem;
     width: 100%;
     outline: none;
     border: 1px solid #bbb;
-    margin-top: -3rem;
+    margin-top: 0;
+    top: 0;
 }
 
 .field-textarea {
     font-family: 'Arimo', sans-serif;
     position: relative;
-    top: 3.5rem;
-    margin-top: -3rem;
     display: block;
     box-sizing: border-box;
     font-size: 2.2rem;
-    line-height: 2rem;
+    line-height: 3.2rem;
     padding: 1rem;
-    height: 15rem;
+    height: 16rem;
     width: 100%;
     outline: none;
     border: 1px solid #bbb;
+    top: 4rem;
+    margin-top: -4rem;
 }
 
 .field-select[value=""] {
@@ -388,6 +389,10 @@ input[type="number"] {
 
 .field-error {
     color: rgba(230, 30, 20, 0.9);
+}
+
+.sign-up-buttons {
+    margin-bottom: 2rem;
 }
 
 .modal {
@@ -512,7 +517,6 @@ input[type="number"] {
     }
 
     .fields {
-        height: 58.6rem;
         padding-top: 3rem;
     }
 
@@ -544,6 +548,7 @@ input[type="number"] {
 
     .margin-t {
         margin-top: 6rem;
+        box-sizing: border-box;
     }
 
     .field-input[value=""] {
@@ -564,29 +569,29 @@ input[type="number"] {
         display: block;
         box-sizing: border-box;
         font-size: 1.6rem;
-        line-height: 2rem;
+        line-height: 2.6rem;
         padding: 1rem;
-        height: 15rem;
+        height: 16rem;
         width: 100%;
         outline: none;
         border: 1px solid #bbb;
-        margin-top: -3rem;
+        margin-top: 0;
+        top: 0;
     }
 
     .field-textarea {
         font-family: 'Arimo', sans-serif;
         position: relative;
-        top: 3.5rem;
-        margin-top: -3rem;
         display: block;
         box-sizing: border-box;
         font-size: 1.6rem;
-        line-height: 2rem;
+        line-height: 2.6rem;
         padding: 1rem;
-        height: 15rem;
         width: 100%;
         outline: none;
         border: 1px solid #bbb;
+        top: 3rem;
+        margin-top: -3rem;
     }
 
     .field-select[value=""] {
